zona de los quizs puesta

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
     <app-navbar></app-navbar>
 
-    <div class="container">
-        <h1>Quizs</h1>
+    <div class="container my-4">
+        <app-quiz></app-quiz>
     </div>
 
 </div>
