--- a/src/app/main/quiz/quiz.component.html
+++ b/src/app/main/quiz/quiz.component.html
@@ -1,4 +1,16 @@
 <div class="row">
+    <p>
+        <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+            <mat-button-toggle selected value="bold" (click)="changeMode('Estudio')" class="mat-button-toggle-checked">
+                Estudio</mat-button-toggle>
+            <mat-button-toggle (click)="changeMode('Examen')" value="italic">Examen</mat-button-toggle>
+            <h3><span class="spanTotalExamen" *ngIf="modoQuiz=='Examen'">{{ aciertos }} / {{ hiragana.length +
+                    katakana.length +
+                    kanji.length }}</span></h3>
+        </mat-button-toggle-group>
+    </p>
+
+
     <div class="col-6">
         <h4 class="text-center">Hiragana</h4>
         <div class="quiz-hiragana">
@@ -10,7 +22,13 @@
                             <h3>{{ item.kana }}</h3>
 
                             <hr>
-                            <input type="text" class="w-70 form-control text-center" disabled value="{{ item.romaji }}">
+                            <input *ngIf="modoQuiz=='Estudio';else inputExamen" disabled type="text"
+                                class="w-70 form-control text-center" value="{{ item.romaji }}">
+
+                            <ng-template #inputExamen>
+                                <input type="text" class="w-70 form-control input_hiragana text-center"
+                                    (keyup)="checkRomaji('hiragana', item.romaji, $event)">
+                            </ng-template>
 
                         </div>
                     </mat-card>
@@ -31,7 +49,12 @@
                             <h3>{{ item.kana }}</h3>
 
                             <hr>
-                            <input type="text" class="w-70 form-control text-center" disabled value="{{ item.romaji }}">
+                            <input *ngIf="modoQuiz=='Estudio';else inputExamen" disabled type="text"
+                                class="w-70 form-control text-center" value="{{ item.romaji }}">
+
+                            <ng-template #inputExamen>
+                                <input type="text" class="w-70 form-control text-center">
+                            </ng-template>
 
                         </div>
                     </mat-card>
@@ -49,7 +72,12 @@
                             <h3>{{ item.kana }}</h3>
 
                             <hr>
-                            <input type="text" class="w-70 form-control text-center" disabled value="{{ item.romaji }}">
+                            <input *ngIf="modoQuiz=='Estudio';else inputExamen" disabled type="text"
+                                class="w-70 form-control text-center" value="{{ item.romaji }}">
+
+                            <ng-template #inputExamen>
+                                <input type="text" class="w-70 form-control text-center">
+                            </ng-template>
 
                         </div>
                     </mat-card>
@@ -58,3 +86,10 @@
         </div>
     </div>
 </div>
+
+
+
+<mat-form-field style="display: none">
+    <mat-label>Message</mat-label>
+    <input matInput #message>
+</mat-form-field>
