--- a/src/app/main/quiz/quiz.component.html
+++ b/src/app/main/quiz/quiz.component.html
@@ -26,7 +26,7 @@
                                 class="w-70 form-control text-center" value="{{ item.romaji }}">
 
                             <ng-template #inputExamen>
-                                <input type="text" class="w-70 form-control input_hiragana text-center"
+                                <input type="text" class="w-70 form-control text-center"
                                     (keyup)="checkRomaji('hiragana', item.romaji, $event)">
                             </ng-template>
 
@@ -53,7 +53,8 @@
                                 class="w-70 form-control text-center" value="{{ item.romaji }}">
 
                             <ng-template #inputExamen>
-                                <input type="text" class="w-70 form-control text-center">
+                                <input type="text" class="w-70 form-control text-center"
+                                    (keyup)="checkRomaji('katakana', item.romaji, $event)">
                             </ng-template>
 
                         </div>
@@ -66,7 +67,7 @@
         <div class="row quiz-kanji">
             <div class="row rowCardQuiz mx-1">
                 <br><br>
-                <div *ngFor="let item of katakana" class="col-xl-3 col-lg-4 col-xs-12 col-md-6 my-3">
+                <div *ngFor="let item of kanji" class="col-xl-3 col-lg-4 col-xs-12 col-md-6 my-3">
                     <mat-card>
                         <div class="text-center">
                             <h3>{{ item.kana }}</h3>
@@ -76,7 +77,8 @@
                                 class="w-70 form-control text-center" value="{{ item.romaji }}">
 
                             <ng-template #inputExamen>
-                                <input type="text" class="w-70 form-control text-center">
+                                <input type="text" class="w-70 form-control text-center"
+                                    (keyup)="checkRomaji('kanji', item.romaji, $event)">
                             </ng-template>
 
                         </div>
