--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-navbar></app-navbar>
 
     <div class="container my-4">
-        <app-quiz></app-quiz>
+        <router-outlet></router-outlet>
     </div>
 
 </div>
