--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,36 +1,20 @@
 <mat-toolbar class="navBar">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon aria-hidden="false" aria-label="Example home icon">book</mat-icon>
-    </button>
-    <button mat-button>
-        <h5>Japanese app</h5>
-    </button>
+    <div routerLink="/">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">book</mat-icon>
+        </button>
+        <button mat-button>
+            <h5>Japanese app</h5>
+        </button>
+    </div>
 
     <div class="itemsMenu">
-        <button mat-button class="menuButton">
-            <h5>Hiragana<br>あ</h5>
-        </button>
-
-        <button mat-button class="menuButton">
-            <h5>Katakana<br>ア</h5>
-        </button>
-
-        <button mat-button class="menuButton">
-            <h5>Kanji<br>日本</h5>
-        </button>
-
-        <button mat-button class="menuButton">
-            <h5>Vocabulario<br>&nbsp;&nbsp;ありがとう！</h5>
+        <button *ngFor="let item of menuItems;" mat-button class="menuButton" [routerLink]="[ item.ruta ]"
+            routerLinkActive="active">
+            <h5>{{ item.nombre }}</h5>
         </button>
 
 
-        <button mat-button class="menuButton">
-            <h5>Gramática<br>に、は、て</h5>
-        </button>
-
-        <button mat-button class="menuButton">
-            <h5>Iniciar sesión<br>Registrarme</h5>
-        </button>
     </div>
 
     <div class="dropdownIcon btnMenuMovil">
@@ -39,8 +23,8 @@
             <mat-icon>menu</mat-icon>
         </button>
         <mat-menu #beforeMenu="matMenu" xPosition="before">
-            <button *ngFor="let item of menuItems; let i = index" mat-menu-item>
-                {{ item }}
+            <button *ngFor="let item of menuItems;" mat-menu-item>
+                {{ item.nombre }}
             </button>
         </mat-menu>
     </div>
