--- a/src/app/katakana/katakana.component.html
+++ b/src/app/katakana/katakana.component.html
@@ -1,1 +1,15 @@
-<p>katakana works!</p>
+<div class="row">
+    <div class="col-4 my-3" *ngFor="let item of katakana">
+        <mat-card>
+            <h1 class="h1Kana text-center">
+                {{ item.kana }}
+            </h1>
+            <hr>
+            <span class="text-center">
+                <h1 class="h1Romaji">
+                    {{ item.romaji }}
+                </h1>
+            </span>
+        </mat-card>
+    </div>
+</div>
