empezando con el filtro

--- a/src/app/hiragana/hiragana.component.html
+++ b/src/app/hiragana/hiragana.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+    <app-filtro-kana></app-filtro-kana>
     <div class="col-4 my-3" *ngFor="let item of hiragana">
         <mat-card>
             <h1 class="h1Kana text-center">
