--- a/src/app/hiragana/hiragana.component.html
+++ b/src/app/hiragana/hiragana.component.html
@@ -1,5 +1,8 @@
 <div class="row">
-    <app-filtro-kana></app-filtro-kana>
+    <form [formGroup]="miFormulario">
+        <input type="text" class="form-control" placeholder="Buscar hiragana" formControlName="buscar"
+            (input)="filtro()" />
+    </form>
     <div class="col-4 my-3" *ngFor="let item of hiragana">
         <mat-card>
             <h1 class="h1Kana text-center">
