routing en el menú de móvil okey

--- a/src/app/kanji/kanji.component.html
+++ b/src/app/kanji/kanji.component.html
@@ -3,7 +3,7 @@
         <input type="text" class="form-control" placeholder="Buscar kanji" formControlName="buscar"
             (input)="filtro()" />
     </form>
-    <div class="col-4 my-3" *ngFor="let item of kanji">
+    <div class="col-lg-4 col-md-6 col-xl-4 my-3" *ngFor="let item of kanji">
         <mat-card>
             <div class="row">
                 <div class="col-6">
