--- a/src/app/main/quiz/quiz.component.html
+++ b/src/app/main/quiz/quiz.component.html
@@ -11,9 +11,48 @@
     </p>
 
 
-    <div class="col-6">
-        <h4 class="text-center">Hiragana</h4>
-        <div class="quiz-hiragana">
+    <div class="col-lg-6 col-xs-12 my-3">
+        <h4 class="text-center">Kanji</h4>
+        <div class="quiz-kanji">
+            <div class="row rowCardQuiz mx-1">
+                <br><br>
+                <div *ngFor="let item of kanji" class="col-xl-4 col-lg-4 col-xs-12 col-md-6 my-3">
+                    <mat-card>
+                        <div class="text-center">
+                            <div class="row">
+                                <div class="col-4">
+                                    <h1>{{ item.kana }}</h1>
+                                </div>
+                                <div class="col-8">
+                                    <span class="text-center">
+                                        <h5 class="h1RomajiKanjiQuiz">
+                                            {{ item.romaji }}
+                                        </h5>
+                                    </span>
+                                </div>
+                            </div>
+
+                            <hr>
+                            <input *ngIf="modoQuiz=='Estudio';else inputExamen" disabled type="text"
+                                class="w-70 form-control text-center"
+                                value="{{ item.significado ? item.significado : ''}}">
+
+                            <ng-template #inputExamen>
+                                <input type="text" class="w-70 form-control text-center"
+                                    (keyup)="checkRomaji('kanji', item.significado ? item.significado : '', $event)">
+                            </ng-template>
+
+                        </div>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-lg-6 col-xs-12">
+        <h4 class="text-center mt-3">Hiragana</h4>
+        <div class="row quiz-hiragana">
             <div class="row rowCardQuiz mx-1">
                 <br><br>
                 <div *ngFor="let item of hiragana" class="col-xl-3 col-lg-4 col-xs-12 col-md-6 my-3">
@@ -35,12 +74,9 @@
                 </div>
             </div>
         </div>
-    </div>
 
-
-    <div class="col-6">
-        <h4 class="text-center">Katakana</h4>
-        <div class="row quiz-katakana">
+        <h4 class="text-center mt-4">Katakana</h4>
+        <div class="row quiz-katakana mb-5">
             <div class="row rowCardQuiz mx-1">
                 <br><br>
                 <div *ngFor="let item of katakana" class="col-xl-3 col-lg-4 col-xs-12 col-md-6 my-3">
@@ -55,30 +91,6 @@
                             <ng-template #inputExamen>
                                 <input type="text" class="w-70 form-control text-center"
                                     (keyup)="checkRomaji('katakana', item.romaji, $event)">
-                            </ng-template>
-
-                        </div>
-                    </mat-card>
-                </div>
-            </div>
-        </div>
-
-        <h4 class="text-center mt-3">Kanji</h4>
-        <div class="row quiz-kanji">
-            <div class="row rowCardQuiz mx-1">
-                <br><br>
-                <div *ngFor="let item of kanji" class="col-xl-3 col-lg-4 col-xs-12 col-md-6 my-3">
-                    <mat-card>
-                        <div class="text-center">
-                            <h3>{{ item.kana }}</h3>
-
-                            <hr>
-                            <input *ngIf="modoQuiz=='Estudio';else inputExamen" disabled type="text"
-                                class="w-70 form-control text-center" value="{{ item.romaji }}">
-
-                            <ng-template #inputExamen>
-                                <input type="text" class="w-70 form-control text-center"
-                                    (keyup)="checkRomaji('kanji', item.romaji, $event)">
                             </ng-template>
 
                         </div>
