--- a/src/app/kanji/kanji.component.html
+++ b/src/app/kanji/kanji.component.html
@@ -3,8 +3,51 @@
         <input type="text" class="form-control" placeholder="Buscar kanji" formControlName="buscar"
             (input)="filtro()" />
     </form>
+
+
+    <div class="row">
+        <div class="col-lg-3 col-xs-12">
+            <button *ngIf="adminMode" type="button" class="btn btn-primary my-3" data-toggle="modal"
+                data-target="#exampleModal">
+                Añadir Kanji
+            </button>
+        </div>
+    </div>
+
+
+    <!-- Modal Kanji Nuevo -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="col-lg-4 col-md-6 col-xl-4 my-3" *ngFor="let item of kanji">
         <mat-card>
+            <div *ngIf="adminMode" class="row">
+                <div class="col-10">
+                    <button class="btn btn-warning float-end mb-3 btnEdKanji">✏️</button>
+                </div>
+                <div class="col-2">
+                    <button class="btn btn-danger float-end mb-3 btnEdKanji" (click)="deleteKanji(item)">🗑️</button>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-6">
                     <h1 class="h1Kana text-center">
