--- a/src/app/kanji/kanji.component.html
+++ b/src/app/kanji/kanji.component.html
@@ -21,17 +21,27 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title" id="exampleModalLabel">Añadir Kanji</h5>
+                    <button type="button" class="close btn" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <form [formGroup]="formularioNuevoKanji">
+                        <h6>&nbsp;Kanji</h6>
+                        <input type="text" class="form-control" placeholder="日本" formControlName="kana" />
+
+                        <h6 class="mt-3">&nbsp;Romaji</h6>
+                        <input type="text" class="form-control" placeholder="Nihon" formControlName="romaji" />
+
+                        <h6 class="mt-3">&nbsp;Significado</h6>
+                        <input type="text" class="form-control" placeholder="Japón" formControlName="significado" />
+                    </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" (click)="crearKanji()" [disabled]="formularioNuevoKanji.invalid"
+                        class="btn btn-primary" data-dismiss="modal">Guardar</button>
                 </div>
             </div>
         </div>
