--- a/src/app/vocabulario/vocabulario.component.html
+++ b/src/app/vocabulario/vocabulario.component.html
@@ -28,16 +28,23 @@
             <div class="col-12 text-center">
                 <div class="row">
                     <div class="col-4 my-2 mx-2 float-left">
-                        <button class="btn btn-secondary mx-3">✏️</button>
-                        <button class="btn btn-dark">🗑️</button>
+                        <button *ngIf="adminMode" pButton type="button" label="✏️"
+                            class="p-button-warning mx-3 my-2 p-button-raised"></button>
+                        <button *ngIf="adminMode" (click)="eliminarCategoria(dato.categoria)" pButton type="button"
+                            label="🗑️" class="p-button-danger my-2 p-button-raised"></button>
                     </div>
-                    <div class="col-3">
-                        <h5 class="my-2"><strong>
+                    <div class="col-4 text-center">
+                        <h3 *ngIf="adminMode" class="my-3"><strong>
                                 <u>{{ dato.categoria }}</u>
-                            </strong></h5>
+                            </strong></h3>
+
+                        <h3 *ngIf="!adminMode" class="my-2"><strong>
+                                <u>{{ dato.categoria }}</u>
+                            </strong></h3>
                     </div>
-                    <div class="col-4 my-2">
-                        <button class="btn btn-primary float-end">➕</button>
+                    <div class="col-3 my-2">
+                        <button *ngIf="adminMode" pButton type="button" label="➕"
+                            class="p-button-primary p-button-raised my-2 float-end"></button>
                     </div>
                 </div>
             </div>
@@ -66,9 +73,7 @@
                             </ng-template>
                         </td>
                         <td *ngIf="adminMode">
-
                             <button pButton type="button" label="✏️" class="p-button-warning p-button-raised"></button>
-
                         </td>
                         <td *ngIf="adminMode">
                             <button pButton type="button" label="🗑️" class="p-button-danger p-button-raised"></button>
