--- a/src/app/vocabulario/vocabulario.component.html
+++ b/src/app/vocabulario/vocabulario.component.html
@@ -1,26 +1,26 @@
-<p>
-    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-        <mat-button-toggle selected value="bold" (click)="changeMode('Estudio')">
-            Estudio</mat-button-toggle>
-        <mat-button-toggle (click)="changeMode('Examen')" value="italic">Examen</mat-button-toggle>
-        <h3><span class="spanTotalExamen" *ngIf="modoQuiz=='Examen'">{{ aciertos }} / {{ totalDatos }}</span>
-        </h3>
-    </mat-button-toggle-group>
-</p>
+<div class="row mb-3">
+    <div class="col-lg-8">
+        <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+            <mat-button-toggle selected value="bold" (click)="changeMode('Estudio')">
+                Estudio</mat-button-toggle>
+            <mat-button-toggle (click)="changeMode('Examen')" value="italic">Examen</mat-button-toggle>
+            <h3><span class="spanTotalExamen" *ngIf="modoQuiz=='Examen'">{{ aciertos }} / {{ totalDatos }}</span>
+            </h3>
+        </mat-button-toggle-group>
+    </div>
+
+    <div class="col-lg-4">
+        <button *ngIf="adminMode" pButton type="button" class="p-button-success p-button-raised float-end">
+            Añadir Categoría
+        </button>
+    </div>
+</div>
 
 <div class="row">
     <form [formGroup]="miFormulario">
         <input type="text" class="form-control" placeholder="Buscar" formControlName="buscar" (input)="filtro()" />
     </form>
 
-    <div class="row">
-        <div class="col-lg-3 col-xs-12">
-            <button *ngIf="adminMode" pButton type="button" class="p-button-success my-3 p-button-raised"
-                data-toggle="modal" data-target="#modalCategoria">
-                Añadir Categoría
-            </button>
-        </div>
-    </div>
 
     <div *ngFor="let dato of datos" class="my-3 col-xl-5 col-md-5 col-xs-12 colVocabulario">
         <div class="row">
@@ -48,7 +48,8 @@
                     </div>
                     <div class="col-3 my-2">
                         <button *ngIf="adminMode" pButton type="button" label="➕"
-                            class="p-button-primary p-button-raised my-2 float-end"></button>
+                            class="p-button-primary p-button-raised my-2 float-end"
+                            (click)="nuevoVocab(dato.categoria)"></button>
                     </div>
                 </div>
             </div>
@@ -98,6 +99,29 @@
         <input type="text" formControlName="nombre" class="form-control">
         <button pButton type="button" [disabled]="formularioCategoria.invalid" label="Guardar"
             class="p-button-primary mt-2 float-end p-button-outlined" (click)="submitEditarCategoria()"></button>
+    </form>
+</p-dialog>
+
+
+<p-dialog position="top" header="Añadir vocabulario" [(visible)]="displayNuevoVoc">
+    <form [formGroup]="formNuevoVoc">
+
+        <label>Palabra en japonés</label>
+        <input type="text" formControlName="kana" placeholder="ありがとう" class="form-control">
+
+        <br>
+        <label>Significado</label>
+        <input type="text" formControlName="significado" placeholder="gracias" class="form-control">
+
+        <br>
+        <label>Categoría</label>
+        <select class="form-control" formControlName="categoria">
+            <option value="-1" hidden>-- Selecciona una categoría --</option>
+            <option *ngFor="let dato of datos" [value]="dato.categoria">{{dato.categoria}}</option>
+        </select>
+
+        <button pButton type="button" [disabled]="formNuevoVoc.invalid" label="Guardar"
+            class="p-button-primary mt-2 float-end p-button-outlined" (click)="submitNuevoVoc()"></button>
     </form>
 </p-dialog>
 
