--- a/src/app/gramatica/gramatica.component.html
+++ b/src/app/gramatica/gramatica.component.html
@@ -1,16 +1,36 @@
-<div class="row">
+<div class="row mb-3">
+    <div class="col-lg-12">
+        <button *ngIf="adminMode" pButton type="button" class="p-button-primary p-button-raised float-end"
+            (click)="nuevaGramatica()">
+            Añadir
+        </button>
+    </div>
+</div>
 
+<div class="row">
     <form [formGroup]="miFormulario">
         <input type="text" class="form-control" placeholder="Buscar" formControlName="buscar" (input)="filtro()" />
     </form>
 
     <div *ngFor="let particula of gramatica; let index = index" class="col-lg-4 col-md-6 col-xs-12 my-3">
+        <div class="row">
+            <div class="col-2 ml-1">
+                <button *ngIf="adminMode" pButton type="button" class="p-button-danger p-button-raised float-left"
+                    (click)="eliminarGramatica(particula.id)" label="🗑️">
+                </button>
+            </div>
+            <div class="col-6">
+                <button *ngIf="adminMode" pButton type="button" class="p-button-warning p-button-raised float-left"
+                    (click)="editarGramatica()" label="✏️">
+                </button>
+            </div>
+        </div>
         <cdk-accordion class="example-accordion">
             <cdk-accordion-item #accordionItem="cdkAccordionItem" class="example-accordion-item" role="button"
                 tabindex="0" [attr.id]="'accordion-header-' + index" [attr.aria-expanded]="accordionItem.expanded"
                 [attr.aria-controls]="'accordion-body-' + index">
                 <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
-                    <h3> {{ particula.particula }}</h3>
+                    <h3 class="mt-2">{{ particula.particula }} </h3>
                     <span class="example-accordion-item-description">
 
 
